# Snok

./: .gitignore  .gitmodules  LICENSE  README.md  Snok.cabal  bootstrap.py  index.html  makefile  project.clj
include/snok/: timer.hpp  types.hpp  view.hpp
shaders/: a.fs  a.vs
src/: Main.elm  Main.hs  client.cpp  main.cpp  server.cpp
src/Snok/: Apple.hs  Box.hs  Classes.hs  Engine.hs  Game.hs  Input.hs  Log.hs  Math.hs  Playable.hs  Player.hs  Shaders.hs  Snake.hs  Types.hs  Utils.hs  Vec.elm  Window.hs
src/snok/: Snake.hs  core.clj  debug.clj  engine.hpp  game.clj  game.hpp  graphics.clj  logic.clj  snake.clj  types.clj  vector.clj  view.clj  view.cpp
