name:                Snok
version:             0.1.0.0
synopsis:            Just some Snake game
description:         Just some Snake game  
homepage:            https://github.com/Jefffrey/Snok
license:             GPL-2
license-file:        LICENSE
author:              Jefffrey
maintainer:          notjefff@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
    type:     git
    location: https://github.com/Jefffrey/Snok.git

executable Snok
    main-is:             Main.hs
    build-depends:       base >= 4.7 && < 4.8,
                         GLFW-b >= 1.4 && < 1.5,
                         OpenGL >= 2.9.1 && < 2.10,
                         stm >= 2.4 && < 2.5
    hs-source-dirs:      src
    default-language:    Haskell2010
